--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,20 @@
       <artifactId>activemq-all</artifactId>
       <version>5.15.10</version>
     </dependency>
+
+    <!--引入redis客户端jedis依赖的jar包-->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <!--jedis依赖的连接池-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.4.2</version>
+    </dependency>
   </dependencies>
 
 </project>
